# blue

./: .gitignore  ACCESS-CONTROL.md  BASIC-EXAMPLE.md  BUILD.md  DEVELOPMENT.md  LOCAL-INSTALLATION.md  ORCHESTRATION-CONCEPTS.md  QUICK-START.md  README.md  SWARM-DEPLOYMENT.md  localhost.envrc
agents/: README.md  build_all_agents.sh  docker_build_all_services.sh  docker_stop_all_agents.sh  docker_stop_all_services.sh  sample_user_agent.py  websocket_counter_agent.py
agents/agentic_employer/: Dockerfile.agent  build_agent.sh  docker_build_agent.sh
agents/apicaller/: Dockerfile.agent  README.md  build_agent.sh  docker-compose.yaml  docker_build_agent.sh  docker_build_service.sh  docker_publish_agent.sh  docker_publish_service.sh  start_service.sh  stop_service.sh
agents/basics/: basics.py
agents/chatgpt/: Dockerfile.agent  build_agent.sh  docker_build_agent.sh  docker_publish_agent.sh  docker_publish_service.sh
agents/clusterer/: Dockerfile.agent  build_agent.sh  (+2 more)
api/: blueprint.py
demos/: README.md
lib/: build_dist_lib.sh  pyproject.toml  setup.py
lib/blue/: agent.py  model.py  operator.py  plan.py  platform.py  registry.py  service.py  session.py  stream.py
lib/blue/agents/: coordinator.py  documenter.py  nl2q.py  openai.py  presenter.py  query_executor.py  registry.py  requestor.py  summarizer.py  visualizer.py
lib/blue/data/: pipeline.py  planner.py  registry.py  schema.py
lib/blue/data/sources/: mongodb_source.py  neo4j_source.py
lib/blue/operators/: openai.py  requestor.py
lib/blue/utils/: neo4j_connection.py  string_utils.py
lib/requirements/: requirements.service
lib/scripts/: build.sh  publish.sh
lib/src/blue/agents/: query_executor.py
operators/: build_all_operators.sh  docker_build_all_operators.sh  docker_publish_all_operators.sh
platform/: docker-compose-localhost-agent-template.yaml  docker-compose-localhost-default.yaml  docker-compose-localhost-platform-template.yaml  docker-compose-localhost-template.yaml  docker-compose-localhost.yaml  docker-compose-swarm-agent-template.yaml  docker-compose-swarm-platform-template.yaml  docker-compose-swarm-template.yaml  docker-compose.yaml  flush.sh  start.sh  stop.sh
platform/cli/: README.md  build_dist_cli.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py
platform/cli/blue/: blue.py
platform/cli/blue-cli/commands/: session.py
platform/cli/blue/commands/: authentication.py  profile.py  session.py
platform/cli/blue_cli/: blue.py  helper.py  manager.py
platform/cli/blue_cli/commands/: authentication.py  helper.py  platform.py  profile.py  service.py
platform/cli/blue_cli/configs/: agents.json  data.json  images.json  models.json  operators.json  platform.json  profile.json
platform/cli/scripts/: build.sh  publish.sh
platform/cli/web-auth/: README.md  next.config.mjs  package-lock.json  package.json
platform/cli/web-auth/pages/: index.js
services/: build_all_services.sh  docker-compose.yaml  docker_publish_all_services.sh  myagent.py  producer.py
(+980 files in other folders)
