[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "blue-cli"
version = "0.8.13"
authors = [
  { name="Megagon Labs", email="contact@megagon.ai" },
]
description = "Command line interface for blue installation and deployment"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
      "Programming Language :: Python :: 3",
      "Operating System :: OS Independent",
]
dynamic = ["scripts", "dependencies"]
license = "BSD-3-Clause"


[project.urls]
Homepage = "https://github.com/megagonlabs/blue"
Issues = "https://github.com/megagonlabs/blue/issues"
Discussions = "https://github.com/megagonlabs/blue/discussions"
